syntax = "proto3";
package protocol;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Luismorlan/newsmux/publisher/protocol";

message CrawlerMessage {
  string source_id = 1;
  string sub_source_id = 2;
  string title = 3;
  string content = 4;
  repeated string image_urls = 5;
  repeated string files_urls = 6;
  google.protobuf.Timestamp crawled_at = 7;
  string origin_url = 8;
  string crawler_ip = 9;
  string crawler_version = 10;
  bool is_test = 11;
}
